<resources>
    <string name="BASE_URL">https://bendabizadam.westeurope.cloudapp.azure.com/api/v1</string>
    <string name="app_name">Touran</string>
    <string name="home">Home</string>
    <string name="Explorez">Explorez</string>
    <string name="ouahran_elbahia">Ouahran Al Bahia!</string>
    <string name="search_places">Rechercher des lieux</string>
    <string name="categories">Categories</string>
    <string name="nourriture">Nourriture</string>
    <string name="culture">Culture</string>
    <string name="shopping">Shopping</string>
    <string name="Enterntainement">Divertissement</string>
    <string name="nature">Nature</string>
    <string name="name">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="profile">Profil</string>
    <string name="personalinfos">Informations personnelles</string>
    <string name="activitylist">Votre liste</string>
    <string name="avislegal">Avis légal</string>politique de confidentialité
    <string name="politique">politique de confidentialité</string>
    <string name="map">Carte</string>
    <string name="Bus">Bus</string>
    <string name="liexdevoyages">Lieux de voyage</string>
    <string name="budget">Budget</string>
    <string name="seeall">Voir Tout</string>
    <string name="voirsurmap">Voir sur Map</string>
    <string name="distance">Distance</string>
    <string name="description">Decription</string>
    <string name="stars">Etoiles</string>
    <string name="ratings">Etoiles</string>
    <string name="generertext">Générer un Planning</string>
    <string name="nbrdays">Nombre de journées</string>
    <string name="nbrpersons">Nombre de personnes</string>
    <string name="yourbudget">Votre budget</string>
    <string name="clicktoexclude">Cliquez sur les activités par priorité</string>
    <string name="resto">Restaurant</string>
    <string name="zoo">Zoo</string>
    <string name="Shopping">Etoiles</string>
    <string name="parc">Pard</string>
    <string name="cinema">Cinema</string>
    <string name="siteshistoriques">Sites Historique</string>
    <string name="uchose">Vous aver choisi </string>
    <string name="generer">Génerer</string>
    <string name="default_info_title">Oran</string>
    <string name="default_info_snippet">Oran EL Bahia</string>


</resources>