<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/tab_carte"
        android:icon="@drawable/ic_baseline_navigation_24"
        android:title="@string/map" />
    <item
        android:id="@+id/tab_budget"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/budget" />
    <item
        android:id="@+id/tab_bus"
        android:icon="@drawable/ic_baseline_directions_bus_24"
        android:title="@string/Bus" />
    <item
        android:id="@+id/tab_profil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>