<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".ui.BudgetFragment">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/start"
            android:text="@string/generertext"
            android:textColor="@color/black"
            android:fontFamily="@font/extra_bold"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_below="@+id/text"
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">


            <com.google.android.material.textfield.TextInputLayout

                style="@style/BoxStyle"

                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nbrdays"
                    android:importantForAutofill="no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nbrdays"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BoxStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nbrpeoeple"
                    android:layout_width="match_parent"
                    android:importantForAutofill="no"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content"
                    android:hint="@string/nbrpersons"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BoxStyle"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/budget"
                    android:layout_width="196dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/yourbudget"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text2"
            android:layout_below="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/start"
            android:text="@string/clicktoexclude"
            android:textColor="@color/black"
            android:fontFamily="@font/extra_bold"
            android:textSize="20dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            style="@style/BoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/text2">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="@string/resto" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="@string/nature" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="@string/shopping" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="@string/culture" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="@string/Enterntainement" />

        </com.google.android.material.chip.ChipGroup>



        <Button
            android:id="@+id/generer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chipGroup"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/generer"
            android:textColor="@color/black" />


    </RelativeLayout>
</layout>
