<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/reallygrey"
        android:orientation="vertical"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/welcome"
            android:layout_below="@+id/toolbar"
            android:paddingStart="@dimen/start"
            android:text="@string/Explorez"
            android:fontFamily="@font/medium"
            android:textSize="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/discover"
            android:layout_below="@+id/welcome"
            android:paddingStart="@dimen/start"
            android:text="@string/ouahran_elbahia"
            android:fontFamily="@font/extra_bold"
            android:textSize="35dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/BoxStyle"
            android:id="@+id/searchView"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="40dp"
            android:layout_below="@+id/discover"
            android:drawableStart="@drawable/alarm"
            android:hint="@string/search_places"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:layout_marginStart="15dp"
            android:textColorHint="@color/grey" />

        <TextView
            android:id="@+id/categories"
            android:layout_below="@+id/searchView"
            android:paddingStart="@dimen/start"
            android:text="@string/categories"
            android:fontFamily="@font/medium"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

        <HorizontalScrollView
            android:id="@+id/startHorizontal"
            android:layout_below="@id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cfood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/r1"
                        android:layout_width="150dp"
                        android:background="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/food"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/place" />

                        <TextView
                            android:id="@+id/food"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/medium"
                            android:text="@string/nourriture"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cculture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/r2"
                        android:layout_width="150dp"
                        android:background="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/culture"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/place" />

                        <TextView
                            android:id="@+id/culture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/culture"
                            android:textColor="@color/black"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/medium"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cshopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/r3"
                        android:layout_width="150dp"
                        android:background="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageshopping"
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/shopping"
                            android:layout_centerInParent="true"
                            android:background="@color/white"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/cart" />

                        <TextView
                            android:id="@+id/shopping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/shopping"
                            android:textColor="@color/black"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/medium"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cnature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/r4"
                        android:layout_width="150dp"
                        android:background="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/nature"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/sun" />

                        <TextView
                            android:id="@+id/nature"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/nature"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/medium"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/centertainement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/r5"
                        android:layout_width="150dp"
                        android:background="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_toLeftOf="@+id/entertainement"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/place" />

                        <TextView
                            android:id="@+id/entertainement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/Enterntainement"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/medium"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/parentRelative"
            android:layout_below="@+id/startHorizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lieux de voyage"
                android:paddingStart="@dimen/start"
                android:fontFamily="@font/medium"
                android:textSize="25dp"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:text="@string/seeall"
                android:backgroundTint="@color/colorPrimary"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/light"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/closest_places"
            android:layout_below="@id/parentRelative"
            android:layout_marginTop="10dp"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
</layout>